--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "~4.4.0",
     "expo-linking": "~7.0.5",
     "expo-constants": "~17.0.8",
-    "expo-navigation-bar": "~4.0.9"
+    "expo-navigation-bar": "~4.0.9",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
