--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "expo-linking": "~7.0.5",
     "expo-constants": "~17.0.8",
     "expo-navigation-bar": "~4.0.9",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-haptics": "~14.0.1",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
