--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\""
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.46",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-navigation-bar": "~4.0.9",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "@expo/vector-icons": "^14.0.2",
-    "expo-router": "~4.0.20",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.8",
-    "expo-navigation-bar": "~4.0.9",
-    "react-native-web": "~0.19.13",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-haptics": "~14.0.1",
-    "expo-notifications": "~0.29.14",
-    "expo-device": "~7.0.3"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
